Issue #SB-28607 fix: Text is not aligned properly when user selects the layout 7 during question creation

--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
@@ -401,6 +401,8 @@ mcq-content-container .option-container.horizontal .option-block-container .opti
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    line-height: initial;
+    padding-top: 5px;
 }
 .mcq-content-container .option-container.horizontal .option-block:last-child {
     margin-bottom: 0%;
